-- Tablas del esquema

CREATE TABLE TIPOS_MATERIAL (
    ID_TIPO_MATERIAL  NUMBER        PRIMARY KEY,
    NOMBRE            VARCHAR2(50)  NOT NULL,
    DESCRIPCION       VARCHAR2(200),
    ESTADO            CHAR(1)       DEFAULT 'A' NOT NULL,
    CONSTRAINT CK_TIPOS_MAT_ESTADO CHECK (ESTADO IN ('A','I'))
);

CREATE TABLE CATEGORIAS (
    ID_CATEGORIA  NUMBER        PRIMARY KEY,
    NOMBRE        VARCHAR2(80)  NOT NULL,
    DESCRIPCION   VARCHAR2(200),
    ESTADO        CHAR(1)       DEFAULT 'A' NOT NULL,
    CONSTRAINT CK_CATEGORIAS_ESTADO CHECK (ESTADO IN ('A','I'))
);

CREATE TABLE USUARIOS (
    CEDULA          VARCHAR2(20)  PRIMARY KEY,
    NOMBRE          VARCHAR2(80)  NOT NULL,
    APELLIDOS       VARCHAR2(120) NOT NULL,
    CORREO          VARCHAR2(120),
    TELEFONO        VARCHAR2(20),
    FECHA_REGISTRO  DATE          DEFAULT SYSDATE NOT NULL,
    ESTADO          CHAR(1)       DEFAULT 'A' NOT NULL,
    CONSTRAINT CK_USUARIOS_ESTADO CHECK (ESTADO IN ('A','I'))
);

CREATE TABLE MATERIALES (
    ID_MATERIAL       NUMBER        PRIMARY KEY,
    TITULO            VARCHAR2(200) NOT NULL,
    AUTOR             VARCHAR2(150),
    EDITORIAL         VARCHAR2(120),
    ANIO_PUBLICACION  NUMBER(4),
    CODIGO_ISBN       VARCHAR2(30),
    ID_TIPO_MATERIAL  NUMBER        NOT NULL,
    ID_CATEGORIA      NUMBER        NOT NULL,
    ESTADO            VARCHAR2(20)  DEFAULT 'DISPONIBLE' NOT NULL,
    CONSTRAINT CK_MATERIALES_ESTADO CHECK (ESTADO IN ('DISPONIBLE','PRESTADO','INACTIVO')),
    CONSTRAINT UQ_MATERIALES_ISBN   UNIQUE (CODIGO_ISBN),
    CONSTRAINT FK_MAT_TIPO          FOREIGN KEY (ID_TIPO_MATERIAL) REFERENCES TIPOS_MATERIAL(ID_TIPO_MATERIAL),
    CONSTRAINT FK_MAT_CATEGORIA     FOREIGN KEY (ID_CATEGORIA)     REFERENCES CATEGORIAS(ID_CATEGORIA)
);

CREATE TABLE PRESTAMOS (
    ID_PRESTAMO               NUMBER        PRIMARY KEY,
    CEDULA                    VARCHAR2(20)  NOT NULL,
    ID_MATERIAL               NUMBER        NOT NULL,
    FECHA_PRESTAMO            DATE          DEFAULT SYSDATE NOT NULL,
    FECHA_DEVOLUCION_ESPERADA DATE          NOT NULL,
    FECHA_DEVOLUCION_REAL     DATE,
    ESTADO                    VARCHAR2(20)  DEFAULT 'ACTIVO' NOT NULL,
    CONSTRAINT CK_PRESTAMOS_ESTADO  CHECK (ESTADO IN ('ACTIVO','DEVUELTO','ANULADO')),
    CONSTRAINT FK_PREST_USUARIO     FOREIGN KEY (CEDULA)      REFERENCES USUARIOS(CEDULA),
    CONSTRAINT FK_PREST_MATERIAL    FOREIGN KEY (ID_MATERIAL)  REFERENCES MATERIALES(ID_MATERIAL)
);

CREATE TABLE MULTAS (
    ID_MULTA          NUMBER        PRIMARY KEY,
    ID_PRESTAMO       NUMBER        NOT NULL,
    CEDULA            VARCHAR2(20)  NOT NULL,
    MONTO             NUMBER(10,2)  NOT NULL,
    DIAS_ATRASO       NUMBER        NOT NULL,
    FECHA_GENERACION  DATE          DEFAULT SYSDATE NOT NULL,
    ESTADO_PAGO       VARCHAR2(15)  DEFAULT 'PENDIENTE' NOT NULL,
    CONSTRAINT CK_MULTAS_ESTADO   CHECK (ESTADO_PAGO IN ('PENDIENTE','PAGADA')),
    CONSTRAINT FK_MULTA_PRESTAMO  FOREIGN KEY (ID_PRESTAMO) REFERENCES PRESTAMOS(ID_PRESTAMO),
    CONSTRAINT FK_MULTA_USUARIO   FOREIGN KEY (CEDULA)      REFERENCES USUARIOS(CEDULA)
);

CREATE TABLE AUDITORIA_LOG (
    ID_LOG           NUMBER        PRIMARY KEY,
    TABLA_AFECTADA   VARCHAR2(30)  NOT NULL,
    OPERACION        VARCHAR2(10)  NOT NULL,
    USUARIO_DB       VARCHAR2(30)  DEFAULT USER NOT NULL,
    FECHA_HORA       DATE          DEFAULT SYSDATE NOT NULL,
    DETALLE          VARCHAR2(4000)
);
